assets/css/style.css
/*Import of Inter google font*/

@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap');

/*Import of Macado google font*/

@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Oswald:wght@200..700&display=swap');

/*CSS variable*/

:root {
    --primary-font: "Inter", sans-serif;
    --secondary-font: "Macondo", cursive;
    --primary-color: #3a2620;
    --secondary-color: #aa9581;
    --highlight-color: #416a8e;
    --highlight-color-light: #7a9fc2;
}


/*Global styles*/

body {
    font-family: var(--primary-font);
}

h1,
h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--primary-color);
}

h1,
h2 {
    text-transform: uppercase;
}

h2 {
    margin-bottom: 2rem;
}

.sub-heading-color {
    color: var(--highlight-color);
}

.section {
    margin-top: 2rem;
    margin-bottom: 2rem;
}


/*Buttons*/

.custom-button-filled {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
}

.custom-button-filled:hover {
    border: 2px solid var(--secondary-color);
    background-color: var(--secondary-color);
    color: white;
}

.custom-button-outlined {
    border: 2px solid var(--highlight-color);
    background-color: white;
    color: var(--highlight-color);
    padding: 7px 25px;
}

.custom-button-outlined:hover {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
    padding: 7px 25px;
}

#student-info {
    border: 2px solid var(--highlight-color);
    background-color: var(--highlight-color);
    color: white;
    width: 300px;
    border-radius: 0;
    padding: 5px 7px;
    margin-bottom: 25px;
}


/*Game library cards*/

#new-games .card,
#fav-games .card {
    border: none;
}


/*Navbar*/

#navbar {
    background-color: var(--primary-color);
}

#navbar .logo {
    width: 30px;
}


/*Header*/

#header .lead {
    font-family: var(--secondary-font);
}


/*Services*/

#services .card-footer {
    font-weight: bold;
    color: var(--highlight-color);
    background-color: transparent;
}

#services .card {
    margin-bottom: 1.5rem;
}


/*Footer / Contact*/

#contact {
    background-color: var(--primary-color);
    color: white;
    padding-bottom: 3rem;
}

#contact h2 {
    color: white;
}

#contact .sub-heading-color {
    color: var(--highlight-color-light);
}

#contact i {
    color: var(--secondary-color);
    font-size: 1.2rem;
    margin-right: 15px;
}

#contact .social-links i {
    color: var(--highlight-color-light);
    font-size: 1.9rem;
    transition: color 0.3s ease-in-out;
}

#contact .social-links i:hover {
    color: var(--secondary-color);
}

#contact .table-dark * {
    background-color: transparent;
}


/*Grid visualisation CSS for testing*/


/*
.container,
.row {
    border: 2px solid black;
}

.col-12 {
    border: 2px solid white;
    background-color: lightgray;
}
*/


/*Media query */


/*Medium devices (tablets, 768px and up)*/

@media screen and (min-width: 768px) {
    /*Make all service card same height for consitency*/
    #services .card-body {
        min-height: 191px;
    }
}


/*Large devices (laptops, 992px and up)*/

@media screen and (min-width: 992px) {
    /*Make all service card same height for consitency*/
    #services .card-body {
        min-height: auto;
    }
}


/*XL devices ( XL laptops, Desktops 1200px and up)*/

@media screen and (min-width: 1200px) {
    /*Make all service card same height for consitency*/
    #services .card-body {
        min-height: 220px;
    }
}


/*XXL devices (Desktops, 1400px and up)*/

@media screen and (min-width: 1400px) {
    /*Make all service card same height for consitency*/
    #services .card-body {
        min-height: 195px;
    }
}

